--- a/storage-units-model/pom.xml
+++ b/storage-units-model/pom.xml
@@ -38,15 +38,18 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jspecify</groupId>
             <artifactId>jspecify</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_annotations</artifactId>
             <version>2.23.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
